rns-lang/tests/snapshots/err-lexer-directives-unknown_directive_as_first_token.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
    .unknown_directive HelloWorld
.end
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/unknown_directive_as_first_token.ja:1:5 ]
   │
 1 │     .unknown_directive HelloWorld
   │     ─────────┬────────  
   │              ╰────────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
